# VIP-2

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile.am  README.md  configure.ac
.travis/: test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  valgrind.supp  vip-cli.bash-completion  vip-qt.pro  vip-tx.bash-completion
contrib/debian/: README.md  changelog  control  rules  vip-qt.desktop  vip-qt.install  vip-qt.manpages  watch
contrib/devtools/: README.md  copyright_header.py  gen-manpages.sh  logprint-scanner.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: org.vip.vipd.plist
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: vip.fc  vip.if  vip.spec  vip.te
contrib/seeds/: generate-seeds.py  makeseeds.py
contrib/spendfrom/: spendfrom.py
depends/: README.md
doc/: Doxyfile.in  README.md  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/gitian-building/: gitian-building-mac-os-sdk.md  gitian-setup-fedora.md  gitian-setup-mac.md  gitian-setup-ubuntu.md  gitian-setup-windows.md
doc/man/: Makefile.am  vip-cli.1  vip-qt.1  vip-tx.1
doc/release-notes/: release-notes-2.3.0.md  release-notes-2.3.1.md  release-notes-3.0.0.md  release-notes-3.0.2.md  release-notes-3.0.4.md  release-notes-3.0.5.1.md  release-notes-3.0.5.md  release-notes-3.0.6.md  release-notes-3.1.0.1.md  release-notes-3.1.0.2.md  release-notes-3.1.0.md  release-notes-3.1.1.md  release-notes-3.2.0.md  release-notes-3.3.0.md  release-notes-3.4.0.md  release-notes-4.0.0.md
share/: setup.nsi.in  ui.rc
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.qt.include  Makefile.qt_locale.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.cpp  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  (+105 more)
src/compat/: byteswap.h  (+3 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  paymentrequestplus.cpp  paymentrequestplus.h  (+34 more)
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui  zvipcontroldialog.ui
src/qt/locale/: vip_de.ts  vip_en.ts  vip_en_US.ts  vip_es.ts  vip_fr_FR.ts  vip_hr_HR.ts  vip_it.ts  vip_ko_KR.ts  vip_nl.ts  vip_pl.ts  vip_ru.ts  vip_tr.ts  vip_zh_CN.ts
src/qt/res/css/: default.css
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
src/qt/vip/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  lockunlock.h  masternodeswidget.cpp  masternodeswidget.h  masternodewizarddialog.cpp  (+53 more)
src/qt/vip/forms/: addresseswidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  privacywidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendcustomfeedialog.ui  topbar.ui  txrow.ui  welcomecontentwidget.ui
src/qt/vip/res/css/: style_dark.css  style_light.css
src/qt/vip/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/vip/settings/forms/: settingsfaqwidget.ui  settingswidget.ui
test/: README.md
(+191 files in other folders)
